# semantic-search-mcp

./: .gitignore  CLAUDE.md  README.md  check.sh  manage.py  pyproject.toml
scripts/: health_check.py  run_server.py
src/code_indexer/: __init__.py  config.py  server.py  utils.py
tests/unit/: test_config.py  test_file_detection.py  test_management.py  test_utils.py
